[workspace]
resolver = "2"
members = [
  "skunk",
  "skunk-cli",
]

[patch.crates-io]
hyper = { git = "https://github.com/jgraef/hyper.git", branch = "switch/main" }
#dhcproto = { git = "https://github.com/jgraef/dhcproto.git", branch = "switch/encoder-buffer-filled" }
dhcproto = { git = "https://github.com/bluecatengineering/dhcproto.git", branch = "master" }
