[workspace]
resolver = "2"
members = [
  "byst",
  "byst-macros",
  "skunk",
  "skunk-api-client",
  "skunk-api-protocol",
  "skunk-cli",
  "skunk-flow-store",
  "skunk-macros",
  "skunk-ui", "skunk-util",
]

[patch.crates-io]
reqwest-websocket = { git = "https://github.com/jgraef/reqwest-websocket.git", branch = "wasm-rewrite" }
