[package]
name = "notify-async"
version = "0.1.0"
edition = "2021"

[features]
default = ["macos_fsevent"]
macos_kqueue = ["notify/macos_kqueue"]
macos_fsevent = ["notify/macos_fsevent"]

[dependencies]
notify = { version = "6.1.1", default-features = false }
tokio = { version = "1.38.0", default-features = false, features = ["sync"] }
