[package]
name = "skunk-api-client"
version = "0.1.0"
edition = "2021"

[dependencies.skunk-api-protocol]
path = "../skunk-api-protocol"

[dependencies.skunk-util]
path = "../skunk-util"
features = ["trigger"]

[dependencies]
futures-util = "0.3.30"
lazy_static = "1.5.0"
reqwest = "0.12.5"
reqwest-websocket = "0.4.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["macros"] }
tracing = "0.1.40"
url = "2.5.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.37.0", features = ["time", "rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen-futures = "0.4.42"
