[package]
name = "skunk-api-protocol"
version = "0.1.0"
edition = "2021"

[features]
default = []
full = ["axum", "sqlx"]
axum = ["dep:axum", "dep:mime"]
sqlx = ["dep:sqlx"]

[dependencies]
axum = { version = "0.7.5", default-features = false, optional = true }
mime = { version = "0.3.17", optional = true }
http = "1.1.0"
rmp-serde = "1.3.0"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.60"
uuid = { version = "1.9.1", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
indexmap = { version = "2.2.6", features = ["serde"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", default-features = false, features = ["chrono", "json", "macros", "uuid"], optional = true }
