[package]
name = "skunk-api"
version = "0.1.0"
edition = "2021"

[features]
client = ["dep:futures-util", "dep:reqwest", "dep:reqwest-websocket", "dep:url"]
server = ["dep:axum", "dep:utoipa"]

[dependencies]
axum = { version = "0.7.5", features = ["ws"], optional = true }
futures-util = { version = "0.3.30", optional = true }
reqwest = { version = "0.12.5", optional = true }
reqwest-websocket = { version = "0.4.0", optional = true }
rmp-serde = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
tracing = "0.1.40"
url = { version = "2.5.2", optional = true }
utoipa = { version = "4.2.3", features = ["axum_extras"], optional = true }
