[package]
name = "skunk-cli"
version = "0.1.0"
edition = "2021"
description = "A person-in-the-middle proxy"
readme = "README.md"
homepage = "https://github.com/jgraef/skunk"
repository = "https://github.com/jgraef/skunk"
license = "MIT"
keywords = ["mitm", "proxy"]
categories = [
    "command-line-utilities",
]

[[bin]]
name = "skunk"
path = "src/main.rs"

[dependencies.skunk-api-protocol]
path = "../skunk-api-protocol"
features = ["axum"]

[dependencies.skunk-flows-store]
path = "../skunk-flows-store"

[dependencies.skunk-util]
path = "../skunk-util"
features = ["trigger"]

[dependencies.byst]
#version = "0.1.0"
path = "../byst"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "macros"] }
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive", "env"] }
color-eyre = "0.6.3"
dirs = "5.0.1"
dotenvy = "0.15.7"
futures-util = "0.3.30"
lazy_static = "1.5.0"
mime = "0.3.17"
notify = { version = "6.1.1", default-features = false, features = ["fsevent-sys", "macos_fsevent"] }
parking_lot = "0.12.3"
rmp-serde = "1.3.0"
semver = "1.0.23"
serde = { version = "1.0.201", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8.12"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.9.1", features = ["v4"] }

[dependencies.skunk]
#version = "0.1.0"
path = "../skunk"
features = ["full"]
