[package]
name = "skunk-flow-store"
version = "0.1.0"
edition = "2021"

[dependencies.skunk-api-protocol]
path = "../skunk-api-protocol"
features = ["sqlx"]

[dependencies]
chrono = "0.4.38"
semver = { version = "1.0.23", features = ["serde"] }
semver-macro = "0.1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["chrono", "json", "macros", "migrate", "runtime-tokio", "sqlite", "uuid"] }
thiserror = "1.0.61"
uuid = "1.9.1"
