[package]
name = "skunk"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["ws"] }
color-eyre = "0.6.3"
dirs = "5.0.1"
dotenvy = "0.15.7"
futures-util = "0.3.30"
hyper = { version = "1.3.1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
pin-project-lite = "0.2.14"
rcgen = { version = "0.13.1", default-features = false, features = ["aws_lc_rs", "pem", "x509-parser"] }
regex = "1.10.4"
rustls = "0.23.5"
rustls-pemfile = "2.1.2"
serde = { version = "1.0.201", features = ["derive"] }
socks5-server = "0.10.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
structopt = "0.3.26"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "net", "signal", "fs", "io-util", "sync"] }
tokio-rustls = "0.26.0"
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-unwrap = "1.0.1"
