[package]
name = "skunk-ui"
version = "0.1.0"
edition = "2021"

[dependencies.skunk-api-client]
version = "0.1.0"
path = "../skunk-api-client"

[dependencies]
tracing = "0.1.40"
tracing-wasm = "0.2.1"
thiserror = "1.0.60"
leptos = { version = "0.6.12", features = ["nightly", "csr"] }
leptos_meta = { version = "0.6.12", features = ["nightly", "csr"] }
leptos_router = { version = "0.6.12", features = ["nightly", "csr"] }
leptos-use = { version = "0.10.10", features = ["serde"] }
console_error_panic_hook = "0.1.7"
gloo-utils = "0.2.0"
wasm-bindgen = "0.2.92"
