[package]
name = "skunk-ui"
version = "0.1.0"
edition = "2021"

[dependencies.skunk-api-client]
path = "../skunk-api-client"

[dependencies.skunk-api-protocol]
path = "../skunk-api-protocol"

[dependencies]
tracing = "0.1.40"
tracing-wasm = "0.2.1"
tokio = { version = "1.37.0", default-features = false, features = ["sync"] }
thiserror = "1.0.60"
leptos = { version = "0.6.12", features = ["nightly", "csr"] }
leptos_meta = { version = "0.6.12", features = ["nightly", "csr"] }
leptos_router = { version = "0.6.12", features = ["nightly", "csr"] }
leptos-use = { version = "0.10.10", features = ["serde"] }
console_error_panic_hook = "0.1.7"
gloo-utils = "0.2.0"
wasm-bindgen = "0.2.92"
stylance = "0.5.1"
leptos_hotkeys = "0.2.2"
lipsum = "0.9.1"
getrandom = { version = "0.2.15", features = ["js"] }
rand = "0.8.5"
url = "2.5.2"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[package.metadata.stylance]
output_file = "../target/app.scss"
class_name_pattern = "skunk-[name]-[hash]"
scss_prelude = '@use "../skunk-ui/assets/prelude.scss" as *;'
