[package]
name = "skunk"
version = "0.1.0"
edition = "2021"
description = "A person-in-the-middle proxy"
readme = "README.md"
homepage = "https://github.com/jgraef/skunk"
repository = "https://github.com/jgraef/skunk"
license = "MIT"
keywords = ["mitm", "proxy"]
categories = [
    "network-programming",
]

[dependencies]
byteorder = "1.5.0"
bytes = "1.6.0"
dhcproto = { version = "0.11.0", optional = true }
etherparse = { version = "0.15.0", optional = true }
futures = "0.3.30"
hashbrown = "0.14.5"
http-body-util = { version = "0.1.1", optional = true }
hyper = { version = "1.3.1", features = ["http1", "server", "client"], optional = true }
hyper-util = { version = "0.1.3", features = ["tokio"], optional = true }
iana-ports = { git = "https://github.com/jgraef/iana-ports.git" }
indexmap = "2.2.6"
ip_network = { version = "0.4.1", features = ["serde"] }
lazy_static = "1.4.0"
nix = { version = "0.29.0", optional = true, features = ["net"] }
nom = "7.1.3"
parking_lot = { version = "0.12.2", features = ["arc_lock"] }
petgraph = "0.6.5"
pin-project-lite = "0.2.14"
pretty-hex = { version = "0.4.1", optional = true }
rcgen = { version = "0.13.1", default-features = false, features = ["aws_lc_rs", "pem", "x509-parser"], optional = true }
regex = "1.10.4"
rustls = { version = "0.23.5", optional = true }
rustls-native-certs = "0.7.0"
rustls-pemfile = { version = "2.1.2", optional = true }
serde = { version = "1.0.202", features = ["derive"] }
serde_yml = "0.0.10"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"], optional = true }
strum = { version = "0.26.2", features = ["derive"] }
tempfile = "3.10.1"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["macros", "net", "io-util", "process"] }
tokio-rustls = { version = "0.26.0", optional = true }
tokio-util = "0.7.11"
tracing = "0.1.40"
url = { version = "2.5.0", features = ["serde"] }

[features]
default = ["full", "debug"]
full = ["socks", "http", "tls", "store", "graph-vis", "pcap"]
socks = []
http = ["dep:hyper", "dep:hyper-util", "dep:http-body-util"]
tls = ["dep:rustls", "dep:tokio-rustls", "dep:rcgen", "dep:rustls-pemfile"]
store = ["dep:sqlx"]
graph-vis = []
pcap = ["dep:etherparse", "dep:dhcproto", "dep:nix"]
debug = ["dep:pretty-hex"]
